// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web component: PickerView should have right properties 1`] = `
LoadedCheerio {
  "0": <div
    class="pickerView"
    style="color: red;"
  >
    <div
      class="pickerViewMulti"
      style="line-height: 0px;"
    />
    <div
      class="pickerViewSelection"
    >
      <div
        class="pickerViewSelectionMaskTop"
      />
      <div
        class="pickerViewSelectionBar"
      />
      <div
        class="pickerViewSelectionMaskTop"
      />
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`web component: PickerView should render correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="pickerView"
    style="height: 0px;"
  >
    <div
      class="pickerViewMulti"
      style="line-height: 0px;"
    />
    <div
      class="pickerViewSelection"
    >
      <div
        class="pickerViewSelectionMaskTop"
      />
      <div
        class="pickerViewSelectionBar"
      />
      <div
        class="pickerViewSelectionMaskTop"
      />
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
